--- a/values.yaml
+++ b/values.yaml
@@ -51,11 +51,11 @@ ingress:
     kubernetes.io/ingress.class: "alb"
     alb.ingress.kubernetes.io/scheme: "internet-facing"
     alb.ingress.kubernetes.io/target-type: "instance"
-    alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP": 8080},{"HTTP": 8080}]'
+    alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP": 8080},{"HTTP": 80}]'
   hosts:
     - host: javaapp.myapp22.xyz
       paths:
-        - path: /api
+        - path: /
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
