--- a/values.yaml
+++ b/values.yaml
@@ -48,7 +48,7 @@ ingress:
   enabled: true
   className: "alb"
   annotations: 
-    kubernetes.io/ingress.class: "alb"
+    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
     alb.ingress.kubernetes.io/scheme: "internet-facing"
     alb.ingress.kubernetes.io/target-type: "instance"
     alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP": 8080},{"HTTP": 80}]'
