--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -11,6 +11,6 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
-      nodeport: {{ .Values.service.nodeport }}
+      nodePort: {{ .Values.service.nodePort }}
   selector:
     {{- include "springboot.selectorLabels" . | nindent 4 }}
