--- a/values.yaml
+++ b/values.yaml
@@ -42,7 +42,7 @@ securityContext: {}
 service:
   type: NodePort
   port: 8080
-  nodeport: 30007
+  nodeport: 30001
 
 ingress:
   enabled: true
@@ -51,7 +51,7 @@ ingress:
     service.beta.kubernetes.io/aws-load-balancer-type: "alb"
     alb.ingress.kubernetes.io/scheme: "internet-facing"
     alb.ingress.kubernetes.io/target-type: "instance"
-    alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP": 8080},{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP": 8080}]'
   hosts:
     - host: javaapp.myapp22.xyz
       paths:
