--- a/values.yaml
+++ b/values.yaml
@@ -50,7 +50,7 @@ ingress:
   annotations: 
     service.beta.kubernetes.io/aws-load-balancer-type: "alb"
     alb.ingress.kubernetes.io/scheme: "internet-facing"
-    alb.ingress.kubernetes.io/target-type: "ip"
+    alb.ingress.kubernetes.io/target-type: "instance"
     alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP": 8080}]'
   hosts:
     - host: javaapp.myapp22.xyz
