--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -38,20 +38,14 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: 8080
               protocol: TCP
           livenessProbe:
              tcpSocket: 
                port: http
-             timeoutSeconds: 5
-             initialDelaySeconds: 60
-             periodSeconds: 10
           readinessProbe:
              tcpSocket:
                port: http
-             timeoutSeconds: 5
-             initialDelaySeconds: 60
-             periodSeconds: 10    
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
