--- a/values.yaml
+++ b/values.yaml
@@ -40,9 +40,8 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: LoadBalancer
   port: 8080
-  nodeport: 30010
 
 ingress:
   enabled: false
