--- a/values.yaml
+++ b/values.yaml
@@ -48,9 +48,9 @@ ingress:
   enabled: true
   className: "alb"
   annotations: 
-    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
-    alb.ingress.kubernetes.io/scheme: "internet-facing"
-    alb.ingress.kubernetes.io/target-type: "instance"
+    service.beta.kubernetes.io/aws-load-balancer-type: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: instance
     alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP": 8080}]'
   hosts:
     - host: javaapp.myapp22.xyz
