--- a/values.yaml
+++ b/values.yaml
@@ -53,9 +53,9 @@ ingress:
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP": 8080}]'
   hosts:
-    - host: javaapp.myapp22.xyz
+    - host: 
       paths:
-        - path: /plans
+        - path: /
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
